Moved to mineproxy/mineproxy, upgraded dependencies

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "minecraft-proxy",
+  "name": "mineproxy",
   "version": "1.0.0",
-  "description": "Easily configurable Minecraft (Java edition) proxy",
+  "description": "Easily configurable and pluggable Minecraft (Java edition) proxy",
   "main": "index.js",
   "scripts": {
     "test": "standard",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Bjornskjald/minecraft-proxy.git"
+    "url": "git+https://github.com/MineProxy/mineproxy.git"
   },
   "keywords": [
     "minecraft",
@@ -18,13 +18,10 @@
   "author": "Bjornskjald <github@bjorn.ml>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Bjornskjald/minecraft-proxy/issues"
+    "url": "https://github.com/MineProxy/mineproxy/issues"
   },
-  "homepage": "https://github.com/Bjornskjald/minecraft-proxy#readme",
+  "homepage": "https://github.com/MineProxy/mineproxy#readme",
   "dependencies": {
-    "buffer-equal": "0.0.1",
-    "minecraft-protocol": "^1.7.0",
-    "minimist": "^1.2.0",
-    "standard": "^11.0.1"
+    "minecraft-protocol": "^1.8.3"
   }
 }
