--- a/config.example.json
+++ b/config.example.json
@@ -3,28 +3,5 @@
   "port": "25565",
   "server_port": "25566",
   "version": "1.12.2",
-  "online": false,
-  "dump": [
-    "open_window",
-    "close_window",
-    "set_slot",
-    "window_items",
-    "craft_progress_bar",
-    "transaction",
-    "set_creative_slot",
-    "enchant_item",
-    "window_click"
-  ],
-  "dump_all": false,
-  "dump_blacklist": [
-    "keep_alive",
-    "update_time",
-    "entity_velocity",
-    "rel_entity_move",
-    "entity_look",
-    "entity_move_look",
-    "entity_teleport",
-    "entity_head_rotation",
-    "position"
-  ]
+  "online": false
 }
